--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.16.2",
     "express-graphql": "^0.6.11",
+    "faker": "^4.1.0",
     "graphql": "^0.12.3",
     "uuid": "^3.1.0"
   }
