--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Tech watch on graphQL with express",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js"
+    "start-dev": "supervisor src/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,5 +16,8 @@
     "graphql": "^0.12.3",
     "graphql-subscriptions": "^0.5.6",
     "uuid": "^3.1.0"
+  },
+  "devDependencies": {
+    "supervisor": "^0.12.0"
   }
 }
