--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "faker": "^4.1.0",
     "graphql": "^0.12.3",
     "graphql-subscriptions": "^0.5.6",
+    "redis": "^2.8.0",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
